# real-time-web-summarizer-extension

./: README.md  main.py  manifest.json  popup.html  pyproject.toml
prompt/: icon_prompt.py
scripts/: background.js  content.js  popup.js
