[project]
name = "real-time-web-summarizer-extension"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.120.3",
    "matplotlib>=3.10.7",
    "python-dateutil>=2.9.0.post0",
    "python-dotenv>=1.2.1",
    "qwen-agent[code-interpreter]>=0.0.31",
    "uvicorn>=0.38.0",
]
